[gd_scene load_steps=4 format=3 uid="uid://t8s7md5aqp7h"]

[ext_resource type="Script" uid="uid://bov8xf8j17624" path="res://ui/player_hud.gd" id="1_4o6vf"]
[ext_resource type="Theme" uid="uid://nfj3a3ko5tjy" path="res://ui/player_hud_theme.tres" id="1_n0n2g"]
[ext_resource type="Texture2D" uid="uid://kc6ajejxliwa" path="res://ui/weapon_icons/flame_icon_active.png" id="3_n0n2g"]

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -6.0
offset_right = 36.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n0n2g")
script = ExtResource("1_4o6vf")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
offset_left = 1.0
offset_top = 38.0
offset_right = 474.0
offset_bottom = 100.0
value = 50.0
show_percentage = false

[node name="WeaponSelectionBar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -257.5
offset_top = -161.0
offset_right = 257.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="WeaponSelectionBar"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("3_n0n2g")
stretch_mode = 5
